tests/bad/no_static_member.ae
/// fail: Struct has no static method with this name

struct Foo {}

def main() {
    Foo::foo()
    Bar::foo()
}